--- a/sprint1/src/index.css
+++ b/sprint1/src/index.css
@@ -1,14 +1,18 @@
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Roboto", sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  background: radial-gradient(
+    circle,
+    rgba(250, 207, 247, 1) 100%,
+    rgba(252, 128, 70, 1) 100%
+  );
+  width: 100vw;
+  height: 100vh;
+  overflow-x: hidden;
+  
 }
-
