--- a/cs-sprint2/src/components/header/header.css
+++ b/cs-sprint2/src/components/header/header.css
@@ -1,5 +1,4 @@
 .lien-header {
-
     position: fixed;
     z-index: 9999;
     top: 0;
@@ -12,6 +11,9 @@
     display: flex;
     align-items: center;
 
+}
+.dropdown-item:hover{
+  background-color: #f7eac8;
 }
 
 .navbar {
