--- a/cs-sprint2/src/components/product/Product.css
+++ b/cs-sprint2/src/components/product/Product.css
@@ -2,18 +2,24 @@
     width: 100%;
     background-color: white;
     border-radius: 10px;
-    height: 33rem;
+    height: 35rem;
 }
 
 .product {
     margin-top: 7rem;
+    margin-bottom: 2rem;
+}
+.dad{
+    position: relative;
 }
 
 .card-list {
     margin-top: 2rem;
-    height: 30rem;
+    width: 100%;
+    height: 100%;
+    /*height: 30rem;*/
     display: grid;
-    grid-template-columns: repeat(4, minmax(0, 1fr));
+    grid-template-columns: repeat(4,1fr);
     gap: 20px;
 }
 
@@ -27,4 +33,30 @@
     font-family: Pacifico, sans-serif;
     font-size: 2rem;
     /*text-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;*/
+}
+.navbar-middle form > div {
+    width: 250px;
+}
+
+.navbar-middle form .search-btn span {
+    border-radius: 20px 0 0 20px;
+    font-size: 24px;
+    background: #fff;
+    height: 100%;
+    cursor: pointer;
+}
+
+.navbar-middle form .search-btn span svg {
+    width: 1rem;
+    height: 1rem;
+}
+
+.navbar-middle form input {
+    border-radius: 0 20px 20px 0;
+}
+.input-group{
+    margin-left: 58rem;
+}
+.page-link{
+    color: black;
 }
