--- a/cs-sprint2/src/components/bodyMainPage/BodyMainPage.css
+++ b/cs-sprint2/src/components/bodyMainPage/BodyMainPage.css
@@ -184,7 +184,7 @@ img {
 
 .body-main-page .carousel {
     height: 100vh;
-    background-image: url("https://www.wallpapertip.com/wmimgs/50-504459_fast-food-4k.jpg");
+    background-image: url("https://png.pngtree.com/background/20230417/original/pngtree-fried-chicken-burger-cola-fast-food-background-picture-image_2445059.jpg");
     background-position: center;
     background-size: cover;
     position: relative;
