--- a/cs-sprint2/src/components/cart/Cart.css
+++ b/cs-sprint2/src/components/cart/Cart.css
@@ -32,7 +32,13 @@
 .fas{
     color: #d9a047;
 }
-
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+}
+input[type=number] {
+    -moz-appearance: textfield;
+}
 @media (min-width: 992px) {
     .card-registration-2 .bg-grey {
         border-top-right-radius: 16px;
